# boilerworks-django-micro

./: .build-complete  .env.example  .gitignore  AGENTS.md  CALLIOPE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  bootstrap.md  conftest.py  docker-compose.yaml  memory.md  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml
api/: admin.py  auth.py  exceptions.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py  views.py
static/admin/css/: dark_theme.css
templates/admin/: base_site.html
webhooks/: models.py  serializers.py  tests.py  urls.py  views.py
webhooks/migrations/: 0001_initial.py
